--- a/index.css
+++ b/index.css
@@ -1,22 +1,37 @@
-* {
-  
-    width: 1920px;
-    height: 1080px;
-    flex-shrink: 0;
+body {
+
     background: linear-gradient(180deg, #839A8D 31.01%, #8B6E80 100%);
-    
+    height: 100vh;
+    margin: 0;
 }
 
 
+ .container {
 
+    color: white; 
+    font-size: 48px; 
+    font-family: Modern Sans; 
+    font-weight: 500; 
+    word-wrap: break-word; 
+    text-align: right; 
+    padding: 70px;
+   
+ }
+ 
+ 
 
-.container h1{
-    color: #FFF;
-    font-family: "Modern Sans";
-    font-size: 30px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
+.BradleyAcostaRojas{
+    color: white; 
+    font-size: 50px; 
+    font-family: Modern Sans; 
+    font-weight: 500; 
+    word-wrap: break-word
+  }
 
-}
-
+  .WebDeveloper{
+    color: white; 
+    font-size: 30px; 
+    font-family: Modern Sans;
+     font-weight: 500; 
+     word-wrap: break-word;
+  }
