--- a/index.css
+++ b/index.css
@@ -20,13 +20,14 @@ body {
  
  
 
-.BradleyAcostaRojas{
+ .BradleyAcostaRojas{
     color: white; 
     font-size: 50px; 
     font-family: Modern Sans; 
     font-weight: 500; 
     word-wrap: break-word
-  }
+
+}
 
   .WebDeveloper{
     color: white; 
@@ -34,4 +35,7 @@ body {
     font-family: Modern Sans;
      font-weight: 500; 
      word-wrap: break-word;
+     padding: 20px;
+    text-align: left;
+    margin-left: 425px; /* Add this line to move it more to the right */
   }
