--- a/index.css
+++ b/index.css
@@ -1,13 +1,10 @@
 body {
-
     background: linear-gradient(180deg, #839A8D 31.01%, #8B6E80 100%);
     height: 100vh;
     margin: 0;
 }
 
-
- .container {
-
+.container {
     color: white; 
     font-size: 48px; 
     font-family: Modern Sans; 
@@ -15,27 +12,55 @@ body {
     word-wrap: break-word; 
     text-align: right; 
     padding: 70px;
-   
- }
- 
- 
+}
 
- .BradleyAcostaRojas{
+.BradleyAcostaRojas{
     color: white; 
     font-size: 50px; 
     font-family: Modern Sans; 
     font-weight: 500; 
     word-wrap: break-word
-
 }
 
-  .WebDeveloper{
+.WebDeveloper{
     color: white; 
     font-size: 30px; 
     font-family: Modern Sans;
-     font-weight: 500; 
-     word-wrap: break-word;
-     padding: 20px;
+    font-weight: 500; 
+    word-wrap: break-word;
+    padding: 20px;
     text-align: left;
     margin-left: 425px; /* Add this line to move it more to the right */
-  }
+}
+
+.TextOMS{ 
+    /* text about my self*/
+    width: 38%;  
+    height: 252px; 
+    text-align: justify; 
+    color: white; 
+    font-size: 27px; 
+    font-family: Modern Sans; 
+    font-weight: 500; 
+    word-wrap: break-word; 
+}
+
+.CTA {
+    color: white; 
+    font-size: 25px; 
+    font-family: Modern Sans; 
+    font-weight: 500;     padding: 50px; 
+    line-height: normal;
+    letter-spacing: 2.97px;
+    margin-left: 20%; 
+    margin-top: -150px; /* Add this line to move it up more */
+    text-decoration: none!important;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.CTA a {
+    text-align: left;
+    margin-left: 20px;
+    color: white; /* Add this line to set the link color to white */
+}
