--- a/Projects.css
+++ b/Projects.css
@@ -171,9 +171,9 @@
      word-wrap: break-word;
      width: 400px;
      height: 310px; 
-     left: 200px; 
+     left: 300px; 
      top: 1120px; 
-   margin-top: 600px; /* Adds a margin of 200px to move the element down */; 
+   margin-top: 800px; /* Adds a margin of 200px to move the element down */; 
   }
 
 .npm-library-description{
@@ -183,13 +183,13 @@
   .EnsuringScaleAndAspectRatios {
     color: white; 
     position: absolute;
-    font-size: 30px; 
+    font-size: 20px; 
     font-family: Modern Sans; 
     font-weight: 500;
      word-wrap: break-word;
      width: 680px;
      height: 213px; 
-     left: 550px; 
+     right: 50px; 
      top: 1120px; 
    margin-top: 1300px; /* Adds a margin of 200px to move the element down */;
 }
@@ -211,10 +211,16 @@
 
   .descriptio {
     color: white;
-    font-size: 20px;
+    font-size: 19px;
     font-family: Modern Sans;
     font-weight: 500;
     word-wrap: break-word;
   }
   
- 
+.vector-5{
+    width: 1654px;
+height: 0px;
+flex-shrink: 0;
+stroke-width: 2px;
+stroke: #FFF;
+}
