--- a/Projects.css
+++ b/Projects.css
@@ -1,3 +1,24 @@
+body {
+    background: linear-gradient(180deg, #839A8D 31.01%, #8B6E80 100%);
+    height: 100vh;
+    margin: 0;
+}
+.CTA {
+    color: white; 
+    font-size: 25px; 
+    font-family: Modern Sans; 
+    font-weight: 500;     
+     
+    line-height: normal;
+    letter-spacing: 2.97px;
+}
+
+.CTA a {
+    text-align: left;
+    margin-left: 20px;
+    color: white; /* Add this line to set the link color to white */
+}
+
 .container {
     width: 1920px;
     height: 5400px;
@@ -191,7 +212,7 @@
      height: 213px; 
      right: 50px; 
      top: 1120px; 
-   margin-top: 1300px; /* Adds a margin of 200px to move the element down */;
+   margin-top: 1450px; /* Adds a margin of 200px to move the element down */;
 }
 
 
@@ -217,10 +238,24 @@
     word-wrap: break-word;
   }
   
-.vector-5{
-    width: 1654px;
-height: 0px;
-flex-shrink: 0;
-stroke-width: 2px;
-stroke: #FFF;
-}
+.WhatITookFromThisExperience {
+    color: white; 
+    text-align: center;
+    position: absolute;
+    font-size: 50px; 
+    font-family: Modern Sans; 
+    font-weight: 500;
+     word-wrap: break-word;
+     width:702px;
+     height: 213px; 
+     left: 550px; 
+     top: 1120px; 
+    margin-top: 2600px; /* Adds a margin of 200px to move the element down */;
+    justify-content: center; /* Add this to center the element horizontally */
+    align-items: center; /* Add this to center the element vertically */
+
+
+     
+
+  }
+  
