--- a/Projects.css
+++ b/Projects.css
@@ -3,20 +3,41 @@ body {
     height: 100vh;
     margin: 0;
 }
+
 .CTA {
     color: white; 
     font-size: 25px; 
     font-family: Modern Sans; 
     font-weight: 500;     
-     
+    justify-content: space-between;
     line-height: normal;
-    letter-spacing: 2.97px;
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+    
 }
 
-.CTA a {
+.nav__links{
+    display: inline-block;
+    
+    
+}
+.nav__links li {
+    display: inline-block;
+    padding: 0px 20px;
+    
+}
+
+.nav__links li a {
+    transition: all 0.3s ease 0s;
     text-align: left;
-    margin-left: 20px;
     color: white; /* Add this line to set the link color to white */
+    text-decoration: none;
+}
+
+.nav__links li a:hover{
+    color: #8B6E80;
+
 }
 
 
