--- a/Projects2.css
+++ b/Projects2.css
@@ -8,15 +8,35 @@ body {
     font-size: 25px; 
     font-family: Modern Sans; 
     font-weight: 500;     
-     
+    justify-content: space-between;
     line-height: normal;
-    letter-spacing: 2.97px;
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+    
 }
 
-.CTA a {
+.nav__links{
+    display: inline-block;
+    
+    
+}
+.nav__links li {
+    display: inline-block;
+    padding: 0px 20px;
+    
+}
+
+.nav__links li a {
+    transition: all 0.3s ease 0s;
     text-align: left;
-    margin-left: 20px;
     color: white; /* Add this line to set the link color to white */
+    text-decoration: none;
+}
+
+.nav__links li a:hover{
+    color: #8B6E80;
+
 }
 
 
@@ -113,7 +133,7 @@ body {
 
 .UserInterfacesText{
     color: white; 
-    font-size: 25px; 
+    font-size: 20px; 
     font-family: Modern Sans; 
     font-weight: 500; 
     word-wrap: break-word;
