--- a/MissionAndVision.css
+++ b/MissionAndVision.css
@@ -4,6 +4,49 @@ body {
     margin: 0;
 }
 
+.AboutMe{
+    width: 1920px;
+     height: 1080px; 
+     position: relative;
+ }
+
+
+.BackgrountBaseColor{
+    width: 1920px; 
+    height: 1080px; 
+    left: 0px; 
+    top: 0px; 
+    position: absolute; 
+    background: linear-gradient(180deg, #839A8D 31%, #8B6E80 100%);
+}
+
+.Vision{
+    width: 524px; 
+    height: 226px; 
+    left: 250px; 
+    top: 150px; 
+    position: absolute; 
+    text-align: justify; 
+    color: white; 
+    font-size: 27px; 
+    font-family: Modern Sans; 
+    font-weight: 500; 
+    word-wrap: break-word;
+}
+
+.Mission{
+    width: 505px; 
+    height: 306px; 
+    left: 1100px; 
+    top: 500px; 
+    position: absolute; 
+    text-align: justify; 
+    color: white;
+     font-size: 27px; 
+    font-family: Modern Sans; 
+    font-weight: 500;
+     word-wrap: break-word;
+}
 
 .CTA {
     color: white; 
@@ -37,6 +80,8 @@ body {
 }
 
 .nav__links li a:hover{
-    color: #8B6E80;
+    color:#8B6E80 ;
 
 }
+
+
