--- a/Projects2.css
+++ b/Projects2.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(180deg, #5A6A61 0%, #9BB8A8 100%);
+    background: linear-gradient(180deg, #765A6B 0%, #DCA8C7 100%);
     margin: 0;
 }
 
@@ -35,7 +35,7 @@ body {
 }
 
 .nav__links li a:hover{
-    color: #8B6E80;
+    color: #5A6A61;
 
 }
 
@@ -43,6 +43,8 @@ body {
 .Proyecto2{
      height: 11000px;
      position: relative; 
+     background: linear-gradient(180deg, #5A6A61 0%, #9BB8A8 100%);
+
 
 }
 
@@ -57,6 +59,7 @@ body {
      font-weight: 500;
      word-wrap: break-word;
      color: white; 
+     
      font-size: 27px; 
 }
 .project{
