More changes comung UP

--- a/Projects2.css
+++ b/Projects2.css
@@ -41,10 +41,10 @@ body {
 
 
 .Proyecto2{
+    width:110%;
      height: 11000px;
      position: relative; 
      background: linear-gradient(180deg, #5A6A61 0%, #9BB8A8 100%);
-
 
 }
 
