--- a/Projects.css
+++ b/Projects.css
@@ -1,283 +1,178 @@
-body {
-    background: linear-gradient(180deg, #839A8D 31.01%, #8B6E80 100%);
-    height: 100vh;
+/* Global Styles */
+
+* {
+    box-sizing: border-box;
     margin: 0;
-}
-
-.CTA {
-    color: white; 
-    font-size: 25px; 
-    font-family: Modern Sans; 
-    font-weight: 500;     
-    justify-content: space-between;
-    line-height: normal;
-    margin-left: auto;
-    display: flex;
-    align-items: center;
-    
-}
-
-.nav__links{
-    display: inline-block;
-    
-    
-}
-.nav__links li {
-    display: inline-block;
-    padding: 0px 20px;
-    
-}
-
-.nav__links li a {
-    transition: all 0.3s ease 0s;
-    text-align: left;
-    color: white; /* Add this line to set the link color to white */
-    text-decoration: none;
-}
-
-.nav__links li a:hover{
-    color: #8B6E80;
-
-}
-
-
-.container {
+    padding: 0;
+  }
+  
+ 
+  
+  /* Project 1 Slide 1 Styles */
+  
+  .Proyect1Slide1 {
     width: 1920px;
     height: 5400px;
     position: relative;
     background: white;
-}
-
-
-.background {
-    width: 1920px;
-    height: 5400px;
-    left: 0px;
-    top: 0px;
-    position: absolute;
+  }
+  
+  .BackgrountBaseColor{
+    width: 1920px; 
+    height: 5400px; 
+    left: 0px; 
+    top: 0px; 
+    position: absolute; 
     background: linear-gradient(180deg, #765A6B 0%, #DCA8C7 100%);
-}
-
-.project-objective {
-    width: 723px;
-    height: 224px;
-    left: 135px;
-    top: 440px;
+  }
+  
+  .ProjectOBJ {
+    width: 723px; 
+    height: 224px; 
+    left: 135px; 
+    top: 440px; 
     position: absolute;
-}
-
-.objective-text {
-    color: white;
-    font-size: 40px;
-    font-family: Modern Sans;
-    font-weight: 500;
-    word-wrap: break-word;
-}
-
-.objective-description {
-    color: white;
-    font-size: 27px;
-    font-family: Modern Sans;
-    font-weight: 500;
-    word-wrap: break-word;
-    margin-left: 20px; /* Move the line on text */
-}
-
-.starting-up-repository {
-    width: 400px; 
-    height: 319px; 
-    left: 135px;
-    top: 950px;
-    position: absolute;
+  }
+  
+  .ProjectObjectiveDes {
+    color: white; 
     font-size: 40px; 
     font-family: Modern Sans; 
     font-weight: 500; 
-    word-wrap: break-word; 
-    color:white;
-    
-}
-
-.starting-up-repository-text {
-    color: white;
-    font-size: 40px;
-    font-family: Modern Sans;
-    font-weight: 500;
     word-wrap: break-word;
-    
-}
+  }
 
-.starting-up-repository-description {
-    color: white;
-    font-size: 22px;
-    font-family: Modern Sans;
-    font-weight: 500;
+  .ProjectObjectiveText{
+    color: white; 
+    font-size: 27px; 
+    font-family: Modern Sans; 
+    font-weight: 500; 
     word-wrap: break-word;
-}
-
-.intern-contribution {
+  }
+  
+  .InternContribution {
     width: 685px;
     height: 156px;
     left: 1079px;
     top: 419px;
-    margin-top: 350px; /* Adds a margin of 200px to move the element down */;
     position: absolute;
-}
-
-.contribution-text {
-
-    color: white;
     font-size: 40px;
-    font-family: Modern Sans;
-    
     font-weight: 500;
-    word-wrap: break-word;
-}
-
-.contribution-description {
-    color: white;
-    margin-left: 20px; /* Move the line on text */
-    font-size: 27px;
-    font-family: Modern Sans;
-    font-weight: 500;
-    word-wrap: break-word;
-}
-
-.full-stack-development {
-    width: 1202px;
-    height: 156px;
-    left: 135px;
-    top: 202px;
-    position: absolute;
-}
-
-.development-text {
-    color: white;
-    font-size: 80px;
-    font-family: Modern Sans;
-    font-weight: 500;
-    word-wrap: break-word;
-}
-
-.naval-air-warfare-internship {
-    left: 1355px;
-    top: 224px;
-    position: absolute;
-}
-
-.internship-text {
-    color: white;
-    font-size: 40px;
-    font-family: Modern Sans;
-    font-weight: 500;
-    word-wrap: break-word;
-}
-.node-jc {
-    color: white; 
-    font-size: 20px; 
-    font-family: Modern Sans; 
-    font-weight: 500;
-     word-wrap: break-word;
-     width: 344px;
-      height: 428px; 
-      left: 669px; 
-      top: 1115px; 
-    margin-top: 200px; /* Adds a margin of 200px to move the element down */; 
-      position: absolute
-  }
-  .node-text{
-    font-size: larger;
-  }
-  .node-package-manager {
-    color: white; 
-    font-size: 25px; 
-    font-family: Modern Sans; 
-    font-weight: 500;
-     word-wrap: break-word;
-     width: 400px;
-      height: 310px; 
-      left: 1100px; 
-      top: 1115px; 
-    margin-top: 700px; /* Adds a margin of 200px to move the element down */; 
-      position: absolute;
-  }
-
-  .description{
-    font-size: 20px; 
-  }
-
-.npm-libraries {
-    color: white; 
-    position: absolute;
-    font-size: 30px; 
-    font-family: Modern Sans; 
-    font-weight: 500;
-     word-wrap: break-word;
-     width: 400px;
-     height: 310px; 
-     left: 300px; 
-     top: 1120px; 
-   margin-top: 800px; /* Adds a margin of 200px to move the element down */; 
-  }
-
-.npm-library-description{
-    font-size: 20px; 
   }
   
-  .EnsuringScaleAndAspectRatios {
+  .InternContributionD {
+  color: white; 
+  font-size: 16px; 
+  font-family: Modern Sans; 
+  font-weight: 500; 
+  word-wrap: break-word;
+  }
+  .InternContributionDes{
     color: white; 
-    position: absolute;
-    font-size: 20px; 
+    font-size: 40px; 
     font-family: Modern Sans; 
-    font-weight: 500;
-     word-wrap: break-word;
-     width: 680px;
-     height: 213px; 
-     right: 50px; 
-     top: 1120px; 
-   margin-top: 1450px; /* Adds a margin of 200px to move the element down */;
-}
+    font-weight: 500; 
+    word-wrap: break-word;
+  }
 
-
-.PuttingItAllTogether {
+  .InternContributionText{
     color: white; 
+    font-size: 27px; 
+    font-family: Modern Sans; 
+    font-weight: 500; 
+    word-wrap: break-word;
+  }
+  
+  .FullStackDevelopmentUsingElectronAndNode {
+    width: 1202px; 
+    height: 156px; 
+    left: 135px; 
+    top: 202px; 
+    position: absolute; 
+    color: white; 
+    font-size: 80px; 
+    font-family: Modern Sans; 
+    font-weight: 500; 
+    word-wrap: break-word;
+  }
+
+  .NavalAirWarfare{
+    width: 794px; 
+    left: 1320px; 
+    top: 224px; 
+    position: absolute; 
+    color: white; 
+    font-size: 40px; 
+    font-family: Modern Sans; 
+    font-weight: 500; 
+    word-wrap: break-word;
+  }
+
+  .StartingUpRepository{
+    width: 400px; 
+    height: 319px; 
+    left: 155px; 
+    top: 994px; 
     position: absolute;
+  }
+
+  .StartingUpDes{
+    color: white; 
     font-size: 40px; 
     font-family: Modern Sans; 
     font-weight: 500;
      word-wrap: break-word;
-     width:702px;
-     height: 213px; 
-     left: 150px; 
-     top: 1120px; 
-   margin-top: 1700px; /* Adds a margin of 200px to move the element down */;
-  }
-
-  .descriptio {
-    color: white;
-    font-size: 19px;
-    font-family: Modern Sans;
-    font-weight: 500;
-    word-wrap: break-word;
   }
   
-.WhatITookFromThisExperience {
+.StartingUpText{
     color: white; 
-    text-align: center;
-    position: absolute;
-    font-size: 50px; 
+    font-size: 27px; 
     font-family: Modern Sans; 
-    font-weight: 500;
-     word-wrap: break-word;
-     width:702px;
-     height: 213px; 
-     left: 550px; 
-     top: 1120px; 
-    margin-top: 2600px; /* Adds a margin of 200px to move the element down */;
-    justify-content: center; /* Add this to center the element horizontally */
-    align-items: center; /* Add this to center the element vertically */
+    font-weight: 500; 
+    word-wrap: break-word;
+}
+ 
+.NodeJs{
+    width: 344px; 
+    height: 428px; 
+    left: 669px; 
+    top: 1115px; 
+    position: absolute;
+}
+
+.NodeJsDs{
+    color: white; 
+    font-size: 24px; 
+    font-family: Modern Sans; 
+    font-weight: 500; 
+    word-wrap: break-word;
+}
+
+.NodeJsDes{
+    color: white; 
+    font-size: 40px; 
+    font-family: Modern Sans; 
+    font-weight: 500; 
+    word-wrap: break-word;
+}
+
+.NodeJsText{
+    color: white; 
+    font-size: 27px; 
+    font-family: Modern Sans; 
+    font-weight: 500; 
+    word-wrap: break-word;
+}
+
+.NodePackage{
+    width: 677px; 
+    height: 310px; 
+    left: 1101px; 
+    top: 1409px; 
+    position: absolute;
+}
 
 
-     
 
-  }
-  
+
+
