--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+body {
+    background: linear-gradient(180deg, #839A8D 31.01%, #8B6E80 100%);
+    height: 100vh;
+    margin: 0;
+}
 
 .CTA {
     color: white; 
@@ -35,13 +40,15 @@
 .nav__links li a:hover{
 color:#8B6E80;
 }
-.BackgrountBaseColor{
-     width: 1920px;
+
+
+
+.BackgroundBaseColor{
+     width: 1900px;
       height: 1080px; 
       left: 0px; 
       top: 0px; 
       position: absolute; 
-     background: linear-gradient(180deg, #839A8D 31%, #8B6E80 100%);
 }
 
 .BradleyAcostaRojas{
