--- a/Projects.css
+++ b/Projects.css
@@ -5,6 +5,23 @@ body{
    padding: 0;
 }
 
+.ProjectOBJ, .InternContribution, .FullStackDevelopmentUsingElectronAndNode, .NavalAirWarfare, .StartingUpRepository,
+.NodeJs, .NodePackage, .SomeOfNpms, .Electron, .ExperienceITook, .EnsuringScale, .CreatedAnElectron, 
+.PuttingItAllTogether, .UsedNode, .header{
+  opacity: 0;
+  animation: fadeIn 1.5s ease-in-out forwards;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 
 .header {
   width: 100%;
