--- a/About.css
+++ b/About.css
@@ -1,16 +1,34 @@
 body {
-    background: linear-gradient(180deg, #839A8D 31.01%, #8B6E80 100%);
-    height: 100vh;
-    margin: 0;
+    
+         background: linear-gradient(180deg, #839A8D 31.01%, #8B6E80 100%);
+        height: 100vh;
+        margin: 0;
+        font-family: Modern Sans; 
+        line-height: 1.6;
+        margin: 0;
+        padding: 0;
+        color:#839A8D;
+    
+    
 }
 
-body {
-    font-family: Modern Sans; 
-    line-height: 1.6;
-    margin: 0;
-    padding: 0;
-    color:#839A8D;
-}
+
+ .container, .header{
+    opacity: 0;
+    animation: fadeIn 1.5s ease-in-out forwards;
+  }
+  
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+      transform: translateY(-20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
 
 .container {
     max-width: 900px;
