--- a/Contact.css
+++ b/Contact.css
@@ -13,7 +13,7 @@ body {
   @keyframes fadeIn {
     0% {
       opacity: 0;
-      transform: translateY(-20px);
+      transform: translateY(20px);
     }
     100% {
       opacity: 1;
@@ -21,21 +21,59 @@ body {
     }
   }
 
+  
+.CTA {
+  color: white; 
+  font-size: 25px; 
+  font-family: Modern Sans; 
+  font-weight: 500;     
+  justify-content: flex-end;    
+  line-height: normal;
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+  letter-spacing: 2.97px;
+  margin-top: -100px; /* Add this line to move it up more */
+  padding: 50px; 
+  text-decoration: none!important;
+  
+}
+
+.nav__links{
+  display: inline-block;
+}
+.nav__links li {
+  padding: 0px 20px;
+
+}
+
+.nav__links li a {
+  transition: all 0.3s ease 0s;
+  text-align: left;
+  color: white; /* Add this line to set the link color to white */
+  text-decoration: none;
+
+}
+
+.nav__links li a:hover{
+color:#8B6E80;
+}
+
 
   .Image1{
-    width: 369px;
-     height: 170.14px; 
-     padding: 2px; 
-     left: 1444px; 
+    width: 369px; 
+    height: 170.14px; 
+    padding: 2px; 
+    left: 1444px;
      top: 205px; 
      position: absolute; 
      background: linear-gradient(180deg, rgba(0, 0, 0, 0.25) 0%, rgba(102, 102, 102, 0.25) 100%); 
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); 
-    flex-direction: column; 
+     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); 
+     flex-direction: column; 
     justify-content: flex-start; 
     align-items: center; 
     gap: 10px; 
-    display: inline-flex"
+    display: inline-flex;
   }
 
 .Contact-Me{
@@ -72,40 +110,3 @@ body {
     text-decoration: underline;
 }
 
-
-.CTA {
-    color: white; 
-    font-size: 25px; 
-    font-family: Modern Sans; 
-    font-weight: 500;     
-    justify-content: flex-end;    
-    line-height: normal;
-    margin-left: auto;
-    display: flex;
-    align-items: center;
-    letter-spacing: 2.97px;
-    margin-top: -100px; /* Add this line to move it up more */
-    padding: 50px; 
-    text-decoration: none!important;
-    
-}
-
-.nav__links{
-    display: inline-block;
-}
-.nav__links li {
-    padding: 0px 20px;
-
-}
-
-.nav__links li a {
-    transition: all 0.3s ease 0s;
-    text-align: left;
-    color: white; /* Add this line to set the link color to white */
-    text-decoration: none;
-
-}
-
-.nav__links li a:hover{
-color:#8B6E80;
-}
