--- a/About.css
+++ b/About.css
@@ -31,9 +31,10 @@ body {
 
 
 .container {
-    max-width: 900px;
+    max-width: 5000px;
+    text-align: center;
     margin:1%;
-    padding: 20px;
+    padding: 80px;
     background: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
