--- a/Projects.css
+++ b/Projects.css
@@ -1,7 +1,7 @@
 /* Global Styles */
 body{
-    background: linear-gradient(180deg, #5A6A61 0%, #9BB8A8 100%);
-   margin: 0;
+  background: linear-gradient(180deg, #765A6B 0%, #DCA8C7 100%);
+  margin: 0;
    padding: 0;
 }
 
