--- a/Contact.css
+++ b/Contact.css
@@ -12,7 +12,7 @@ body {
   
   @keyframes fadeIn {
     0% {
-      opacity: 0;
+      opacity: 1;
       transform: translateY(20px);
     }
     100% {
@@ -71,9 +71,41 @@ color:#8B6E80;
      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); 
      flex-direction: column; 
     justify-content: flex-start; 
-    align-items: center; 
-    gap: 10px; 
     display: inline-flex;
+  }
+
+  .Image1:hover{
+    animation: shake 0.5s ease-in-out; 
+    box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.25); /* increase box shadow on hover */
+    opacity: 1; /*  keep the element visible */
+
+  }
+
+  @keyframes shake {
+    0% {
+      transform: translateX(0) translateY(0);
+      opacity: 1; 
+    }
+    20% {
+      transform: translateX(-10px) translateY(0);
+      opacity: 1; 
+    }
+    40% {
+      transform: translateX(10px) translateY(0);
+      opacity: 1; 
+    }
+    60% {
+      transform: translateX(0) translateY(-10px);
+      opacity: 1; 
+    }
+    80% {
+      transform: translateX(0) translateY(10px);
+      opacity: 1; 
+    }
+    100% {
+      transform: translateX(0) translateY(0);
+      opacity: 1; 
+    }
   }
 
 .Contact-Me{
