--- a/index.css
+++ b/index.css
@@ -82,6 +82,30 @@ body {
      flex-direction: column; 
     display: inline-flex;
   }
+  .Image1:hover {
+    animation: shake 0.5s ease-in-out;
+   box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.25); /* increase box shadow on hover */
+  }
+  @keyframes shake {
+    0% {
+      transform: translateX(0) translateY(0);
+    }
+    20% {
+      transform: translateX(-10px) translateY(0);
+    }
+    40% {
+      transform: translateX(10px) translateY(0);
+    }
+    60% {
+      transform: translateX(0) translateY(-10px);
+    }
+    80% {
+      transform: translateX(0) translateY(10px);
+    }
+    100% {
+      transform: translateX(0) translateY(0);
+    }
+  }
 
   .Image7{
     width: 369px; 
