--- a/Contact.css
+++ b/Contact.css
@@ -1,3 +1,4 @@
+
 body {
     background: linear-gradient(180deg, #839A8D 31.01%, #8B6E80 100%);
     height: 100vh;
@@ -24,6 +25,7 @@ body {
   
 .CTA {
   color: white; 
+  width: 500px;
   font-size: 25px; 
   font-family: Modern Sans; 
   font-weight: 500;     
@@ -33,7 +35,7 @@ body {
   display: flex;
   align-items: center;
   letter-spacing: 2.97px;
-  margin-top: -250px; /* Add this line to move it up more */
+  margin-top: -100px; /* Add this line to move it up more */
   padding: 50px; 
   text-decoration: none!important;
   
@@ -71,6 +73,7 @@ color:#8B6E80;
      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); 
      flex-direction: column; 
     justify-content: flex-start; 
+  
     display: inline-flex;
   }
 
@@ -107,6 +110,7 @@ color:#8B6E80;
       opacity: 1; 
     }
   }
+
 
 .Contact-Me{
     width: 800px;
