--- a/Projects.css
+++ b/Projects.css
@@ -277,17 +277,20 @@ body{
   width: 1147px; 
   height: 781px; 
   left: 404px; 
-  top: 3489px; 
+  top: 3600px; 
   position: absolute; 
   text-align: center;
 }
 
 .ExperienceITookDs{
   color: white; 
-  font-size: 80px; 
+  font-size: 70px; 
+  top: 3700px; 
+
   font-family: Modern Sans; 
   font-weight: 500; 
   word-wrap: break-word;
+
 }
 
 .ExperienceITookDes{
@@ -300,7 +303,8 @@ body{
 
 .ExperienceITookText{
   color: white; 
-  font-size: 50px; 
+  width: 400px;
+  font-size: 40px; 
   font-family: Modern Sans; 
   font-weight: 500; 
   word-wrap: break-word;
