--- a/Contact.css
+++ b/Contact.css
@@ -1,10 +1,15 @@
+html, body {
+  height: 100%;
+  margin: 0;
 
-body {
-    background: linear-gradient(180deg, #839A8D 31.01%, #8B6E80 100%);
-    height: 100vh;
-    margin: 0;
 }
 
+body {
+  background: linear-gradient(to bottom, #839A8D 31.01%, #8B6E80 100%); /* Adjust gradient colors as needed */
+  display: flex;
+  flex-direction: column;
+
+}
 
 .Contact-Me, .contact-info, .Image1, .CTA {
     opacity: 0;
@@ -22,7 +27,14 @@ body {
     }
   }
 
-  
+  .BackgroundBaseColor{
+    width: 100%;
+    overflow: hidden; /* Prevent overflow issues */
+    height: 100%; 
+    left: 0px; 
+    top: 0px; 
+    position: absolute; 
+  }
 .CTA {
   color: white; 
   width: 500px;
@@ -77,6 +89,7 @@ color:#8B6E80;
     display: inline-flex;
   }
 
+
   .Image1:hover{
     animation: shake 0.5s ease-in-out; 
     box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.25); /* increase box shadow on hover */
@@ -110,6 +123,15 @@ color:#8B6E80;
       opacity: 1; 
     }
   }
+  .Image7 {
+    width: 369px; 
+    height: 170.14px; 
+    left: 2px; 
+    top: 2px;
+     position: absolute;
+  }
+
+  
 
 
 .Contact-Me{
@@ -123,6 +145,7 @@ color:#8B6E80;
     margin-top: 200px;
 }
 
+
 .contact-info{
     width: 850px;
     color: white; 
@@ -132,17 +155,145 @@ color:#8B6E80;
     word-wrap: break-word;
     margin-left: 50px;
     margin-top: -10px;
-    text-decoration: none;
+   
     justify-content: space-between;
     align-items: center;
  
 }
 .contact-info a {
 
-        color:#814269; /* LinkedIn Blue */
-        text-decoration: none;
+   color:#814269; /* LinkedIn Blue */
+   text-decoration: none;
 }
 .contact-info a:hover {
     text-decoration: underline;
 }
 
+.Vector7{
+  width: 800px; 
+  height: 0px; 
+  left: 20px; 
+  top:350px; 
+  position: absolute; 
+  border: 2px white solid;
+  }
+
+/* iPhone 14-15 Pro Max queries */
+@media only screen and (max-width: 430px) and (device-height: 932px) and (-webkit-device-pixel-ratio: 3) {
+  /* styles for iPhone 14-15 Pro Max devices go here */
+
+  .CTA {
+    width: 300px; /* adjust width for smaller screen */
+    position: absolute;
+    font-size: 20px; /* adjust font size for smaller screen */
+    top: 750px;
+    right: -55px;
+  }
+
+  .Image1 {
+    width: 124px;
+    height: 67px;
+    left: 280px;
+    top: 32px;
+    position: absolute;
+  
+    
+  }
+  .Image7{
+    width: 123px;
+    height: 63px;
+    left: 4px;
+    top: 3px;
+    position: absolute;
+
+  }
+
+  .Contact-Me {
+    width: 360px;
+    font-size: 20px; 
+    margin-left: 20px; 
+    margin-top: 150px; 
+  }
+
+  .contact-info {
+    width: 650px; /* adjust width for smaller screen */
+    font-size: 20px; /* adjust font size for smaller screen */
+    margin-left: 20px; /* adjust margin left for smaller screen */
+    margin-top: -10px; /* adjust margin top for smaller screen */
+  }
+
+  .Vector7{
+    width: 380px; 
+    height: 0px; 
+    left: 20px; 
+    top: 290px; 
+    position: absolute; 
+    border: 2px white solid;
+    }
+
+  .ThanksFor{
+    position: absolute; 
+    top: 200px;
+    width: 350px; /* adjust width for smaller screen */
+  }
+
+}
+
+@media only screen and (max-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) {
+  /* styles for iPhone 12-13-14-15 Pro devices go here */
+
+  .CTA {
+    width: 280px; /* adjust width for smaller screen */
+    position: absolute;
+    font-size: 20px; /* adjust font size for smaller screen */
+    top: 700px;
+    right: -50px;
+  }
+
+  .Image1 {
+    width: 114px;
+    height: 60px;
+    left: 260px;
+    top: 30px;
+    position: absolute;
+  
+    
+  }
+  .Image7{
+    width: 113px;
+    height: 58px;
+    left: 4px;
+    top: 3px;
+    position: absolute;
+
+  }
+
+  .Contact-Me {
+    width: 340px;
+    font-size: 20px; 
+    margin-left: 20px; 
+    margin-top: 140px; 
+  }
+
+  .contact-info {
+    width: 630px; /* adjust width for smaller screen */
+    font-size: 20px; /* adjust font size for smaller screen */
+    margin-left: 20px; /* adjust margin left for smaller screen */
+    margin-top: -10px; /* adjust margin top for smaller screen */
+  }
+
+  .Vector7{
+    width: 360px; 
+    height: 0px; 
+    left: 20px; 
+    top: 290px; 
+    position: absolute; 
+    border: 2px white solid;
+    }
+
+  .ThanksFor{
+    position: absolute; 
+    top: 190px;
+    width: 330px; /* adjust width for smaller screen */
+  }
+}
