--- a/index.css
+++ b/index.css
@@ -220,7 +220,7 @@ body {
   }
 }
 
-
+/* IPhone 12 Pro max queries*/
 @media only screen and (max-width: 428px) and (device-height: 926px) and (-webkit-device-pixel-ratio: 3) {
   .BackgroundBaseColor {
     width: 430px;
@@ -322,6 +322,8 @@ body {
   }
 }
 
+
+/* IPhone 14-15 Pro max queries*/
 @media only screen and (max-width: 430px) and (device-height: 932px) and (-webkit-device-pixel-ratio: 3) {
   .BackgroundBaseColor {
     width: 430px;
@@ -404,6 +406,106 @@ body {
     position: absolute;
     color: white;
     font-size: 27px;
+    font-family: Modern Sans;
+    font-weight: 500;
+    letter-spacing: 2.97px;
+    word-wrap: break-word;
+  }
+  
+
+  .Vector3 {
+    width: 0px;
+    height: 214px;
+    left: 18px;
+    top: 630px;
+    position: absolute;
+    transform: rotate(-180deg);
+    transform-origin: 0 0;
+    border: 1px white solid;
+  }
+}
+/*iPhone pro 12-15*/
+@media only screen and (max-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) {
+  .BackgroundBaseColor {
+    width: 390px;
+    height: 844px;
+    position: relative;
+    background: linear-gradient(180deg, #839A8D 31%, #8B6E80 100%);
+  }
+
+  .BradleyHi {
+    width: 182px;
+    height: 208px;
+    left: 26px;
+    top: 422px;
+    position: absolute;
+    text-align: justify;
+    color: white;
+    font-size: 16px;
+    font-family: Modern Sans;
+    font-weight: 500;
+    word-wrap: break-word;
+  }
+
+  .BradleyAcostaRojas {
+    width: 300px;
+    left: 26px;
+    top: 195px;
+    position: absolute;
+    color: white;
+    font-size: 24px;
+    font-family: Modern Sans;
+    font-weight: 500;
+    word-wrap: break-word;
+  }
+
+  .Image1 {
+    width: 114px;
+    height: 60px;
+    left: 260px;
+    top: 30px;
+    position: absolute;
+  
+  }
+
+  .Image7{
+    width: 113px;
+    height: 58px;
+    left: 4px;
+    top: 3px;
+    position: absolute;
+
+  }
+
+
+  .WebDeveloper {
+    left: 172px;
+    top: 282px;
+    position: absolute;
+    color: white;
+    font-size: 24px;
+    font-family: Modern Sans;
+    font-weight: 500;
+    word-wrap: break-word;
+  }
+
+  .Vector2 {
+    width: 0px;
+    height: 200px;
+    left: 372px;
+    top: 305px;
+    position: absolute;
+    transform: rotate(90deg);
+    transform-origin: 0 0;
+    border: 1px white solid;
+  }
+
+  .CTA {
+    top: 230px;
+    right: -55px;
+    position: absolute;
+    color: white;
+    font-size: 20px;
     font-family: Modern Sans;
     font-weight: 500;
     letter-spacing: 2.97px;
