--- a/Contact.css
+++ b/Contact.css
@@ -1,7 +1,6 @@
 html, body {
   height: 100%;
   margin: 0;
-
 }
 
 body {
@@ -27,6 +26,25 @@ body {
     }
   }
 
+
+  .CTA {
+    color: white; 
+    width: 500px;
+    font-size: 25px; 
+    font-family: Modern Sans; 
+    font-weight: 500;     
+    justify-content: flex-end;    
+    line-height: normal;
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+    letter-spacing: 2.97px;
+    margin-top: -100px; /* Add this line to move it up more */
+    padding: 50px; 
+    text-decoration: none!important;
+    
+  }
+
   .BackgroundBaseColor{
     width: 100%;
     overflow: hidden; /* Prevent overflow issues */
@@ -35,23 +53,8 @@ body {
     top: 0px; 
     position: absolute; 
   }
-.CTA {
-  color: white; 
-  width: 500px;
-  font-size: 25px; 
-  font-family: Modern Sans; 
-  font-weight: 500;     
-  justify-content: flex-end;    
-  line-height: normal;
-  margin-left: auto;
-  display: flex;
-  align-items: center;
-  letter-spacing: 2.97px;
-  margin-top: -100px; /* Add this line to move it up more */
-  padding: 50px; 
-  text-decoration: none!important;
-  
-}
+
+
 
 .nav__links{
   display: inline-block;
@@ -244,6 +247,7 @@ color:#8B6E80;
 
 }
 
+/* iPhone 12-13-14-15 Pro queries */
 @media only screen and (max-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) {
   /* styles for iPhone 12-13-14-15 Pro devices go here */
   .BackgroundBaseColor {
